Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1788

osc_brw_redo_request() shouldn't print a message to console when retrying because of EINPROGRESS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.3.0, Lustre 2.4.0
    • Lustre 2.3.0, Lustre 2.4.0
    • None
    • 3
    • 4465

      EINPROGRESS can now legitemately be returned during normal operation (e.g. quota rebalancing is in progress), so we shouldn't print an error message on client each time a retry is done due to EINPROGRESS.

            johann Johann Lombardi (Inactive)
            johann Johann Lombardi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: